# nevoflux

./:    .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  README.md  eslint.config.mjs  package-lock.json  package.json  surfer.json
.github/: advanced-issue-labeler.yml
.github/workflows/: appimage-build.yml  build.yml  code-linter.yml  finalize-release.yml  issue-metrics.yml  linux-aarch64-release-build.yml  linux-release-build.yml  linux-x86_64-release-build.yml  macos-aarch64-release-build.yml  macos-release-build.yml  macos-universal-release-build.yml  macos-x86_64-release-build.yml  pr-check.yml  test-runners.yml  update-agent.yml  wait-for-gcb.yml  windows-native-build.yml  windows-profile-build.yml  windows-release-build.yml
.husky/: post-commit  pre-commit
cloudbuild/: Dockerfile  linux-aarch64-build.yaml  linux-build.yaml  linux-x86_64-build.yaml  windows-aarch64-build.yaml  windows-build.yaml  windows-final-build.yaml  windows-pgo-build.yaml  windows-x86_64-build.yaml
cloudbuild/win-cross/: install-vs.py
configs/common/: mozconfig
configs/macos/: mozconfig
configs/windows/: mozconfig
docs/plans/: 2026-01-22-channel-architecture-refactor-implementation.md  2026-02-01-jswindowactors-bridge-design.md
docs/reference/: pack-development.md
native/nevoflux-agent/: .gitignore  Cargo.toml  README.md
patches/: @zen-browser+surfer+1.13.4.patch  @zen-browser+surfer+1.14.6.patch
prefs/firefox/: browser.yaml
prefs/zen/: workspaces.yaml  zen.yaml
scripts/: activate-builtin-agent.ps1  apply-nevoflux-patches-dev.sh  copy-distribution.sh  deref-builtin-addon-symlinks.sh  download-language-packs.sh  export-nevoflux-patches.sh  launch-nevoflux.sh  maybe-patch-package.cjs  package-extension.sh  reload-extension.sh  revert-zen-changes.sh  setup-native-host.sh  setup-windows-runner.ps1  sign-windows.ps1  test-cross-compile-patches.sh  test-extension-minimal.sh
scripts/gha/: check-windows-runner.ps1  inject-agent.sh  test-inject-agent.sh  test-mozconfig-semantics.sh
src/: -prettierignore.patch  -stylelintignore.patch  -stylelintrc-js.patch
src/nevoflux/crates/: Cargo.toml
src/nevoflux/crates/nevoflux-agent/: Cargo.toml
src/nevoflux/crates/nevoflux-agent/examples/: link_checker_scenario.rs
src/nevoflux/crates/nevoflux-agent/src/: action_router.rs  llm_integration.rs  main.rs  session.rs  stream_manager.rs
src/nevoflux/crates/nevoflux-agent/src/agent/: mod.rs
src/nevoflux/crates/nevoflux-agent/src/channels/: input.rs  mcp.rs  mod.rs  output.rs  page_llm.rs
src/nevoflux/crates/nevoflux-agent/src/native_messaging/: handler.rs  mod.rs  transport.rs
src/nevoflux/crates/nevoflux-agent/src/tools/: definitions.rs  executor.rs  mod.rs
src/nevoflux/crates/nevoflux-browser/: Cargo.toml
src/nevoflux/crates/nevoflux-browser/src/: commands.rs  lib.rs  protocol.rs
src/nevoflux/crates/nevoflux-common/: Cargo.toml
src/nevoflux/crates/nevoflux-common/src/: config.rs  error.rs  lib.rs  protocol.rs  types.rs
src/nevoflux/crates/nevoflux-common/tests/: protocol_tests.rs
src/nevoflux/crates/nevoflux-llm/: Cargo.toml
src/nevoflux/crates/nevoflux-llm/src/: anthropic.rs  client.rs  lib.rs  openai.rs  stream.rs
src/nevoflux/crates/nevoflux-mcp/: Cargo.toml
src/nevoflux/crates/nevoflux-mcp/src/: client.rs  lib.rs  protocol.rs  transport.rs
src/nevoflux/crates/nevoflux-wasm/: Cargo.toml
src/nevoflux/crates/nevoflux-wasm/src/: lib.rs  runtime.rs  sandbox.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/: Cargo.toml  README.md  build.sh
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/chat-sidebar/: Cargo.toml  Trunk.toml  index.html
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/chat-sidebar/assets/: chat-sidebar.css
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/chat-sidebar/src/: context.rs  hooks.rs  lib.rs  messaging.rs  state.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/chat-sidebar/src/bindings/: mod.rs  nevoflux_api.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/chat-sidebar/src/components/: agent_status.rs  artifact_card.rs  ask_user_dialog.rs  connection_status_bar.rs  event_bus_listener.rs  header.rs  history_panel.rs  input_area.rs  message_bubble.rs  message_list.rs  mod.rs  onboarding_screen.rs  rail.rs  render_progress_card.rs  status_bar.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/chat-sidebar/src/components/input_area/: context_bar.rs  mod.rs  text_input.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/chat-sidebar/src/components/loop_ui/: iteration_card.rs  mod.rs  sticky_loop_card.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/chat-sidebar/src/components/message_area/: activity_feed.rs  code_block.rs  error_card.rs  live_tool_feed.rs  message_bubble.rs  message_list.rs  mod.rs  welcome_screen.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/chat-sidebar/src/messaging/: bridge.rs  browser_tools.rs  handler.rs  sender.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/chat-sidebar/src/state/: agent.rs  connection.rs  history.rs  loop_state.rs  message.rs  mod.rs  permission.rs  render_job.rs  session.rs  tools.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/content-sidebar/: Cargo.toml  Trunk.toml  index.html
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/content-sidebar/assets/: content-sidebar.css
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/content-sidebar/src/: lib.rs  messaging.rs  page_context.rs  shadow_host.rs  state.rs  tool_executor.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/content-sidebar/src/components/: content_view.rs  default_view.rs  error_view.rs  loading_view.rs  mod.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/scripts/: fix-csp.py  fix-csp.sh
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/shared-protocol/: Cargo.toml
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/shared-protocol/src/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  chat.rs  common.rs  events.rs  lib.rs
src/nevoflux/extensions/nevoflux-agent/dioxus-ui/shared-protocol/tests/: error_payload.rs
(+333 files in other folders)
