[workspace]
members = [
    "nevoflux-agent",
    "nevoflux-llm",
    "nevoflux-mcp",
    # "nevoflux-wasm",  # Temporarily disabled - requires Rust 1.82+
    "nevoflux-browser",
    "nevoflux-common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NevoFlux Contributors"]
license = "MPL-2.0"
repository = "https://github.com/nevoflux/nevoflux"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client - use rustls-tls to avoid native-tls issues
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }

# WASM runtime
wasmtime = "16.0"

# Utilities
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"
