[package]
name = "nevoflux-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nevoflux-agent"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal dependencies
nevoflux-common = { path = "../nevoflux-common" }
nevoflux-llm = { path = "../nevoflux-llm" }
nevoflux-mcp = { path = "../nevoflux-mcp" }
# nevoflux-wasm = { path = "../nevoflux-wasm", optional = true }  # Temporarily disabled - requires Rust 1.82+
nevoflux-browser = { path = "../nevoflux-browser" }

# Shared protocol with extension (no WASM bindings)
shared-protocol = { path = "../../extensions/nevoflux-agent/dioxus-ui/shared-protocol", default-features = false }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
uuid = { workspace = true }
futures = { workspace = true }

# HTTP client for LLM API
reqwest = { workspace = true }

[features]
default = []
# wasm-runtime = ["nevoflux-wasm"]  # Temporarily disabled
