[package]
name = "nevoflux-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Internal dependencies
nevoflux-common = { path = "../nevoflux-common" }

# Additional dependencies
tokio-util = { version = "0.7", features = ["codec"] }
