# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "chat-sidebar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NevoFlux Chat Sidebar - Dioxus WASM UI for browser sidebar"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared-protocol = { path = "../shared-protocol" }
dioxus.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["Navigator", "Clipboard"] }
gloo.workspace = true
gloo-utils.workspace = true
futures.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true

[features]
default = []
