# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "shared-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared protocol types for Chat<->Background<->Content communication"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
